<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LibHidroid test app</string>
    <string name="do_test">Test it!</string>
    <string name="init_test_input">Hello!</string>
    <string name="testOutputLabel">Test output</string>
    <string name="testLogLabel">Logs</string>
    <string name="init_test_log"></string>
    <string name="testInputLabel">Message</string>
    <string name="socketType_streaming">Streaming</string>
    <string name="socketType_datagram">Datagram</string>
    <string name="socketType_seqpacket">SeqPacket</string>
    <string name="socketTypeLabel">Socket type</string>
    <string name="psmLabel">PSM</string>
    <string name="initTestPSM">4097</string>
    <string name="chooseBondedDevice">Choose bonded device</string>
    <string name="l2capTestTypePrompt">Message type</string>
    <string-array name="l2capTestTypes">
        <item>Custom</item>
        <item>Raw HID test</item>
        <item>Keyboard HID test</item>
    </string-array>
    <string name="test_log">test</string>
</resources>
